# MCDashBoard

./: README.md  compose.yml
.devcontainer/backend/: compose.devcontainer.yml  devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: .gitignore  Dockerfile  Dockerfile.dev  cspell.json  pyproject.toml
backend/app/: databaseInterface.py  main.py  model.py
backend/app/api/: model.py  route.py
backend/app/api/application/: api.py  status_use_case.py
backend/app/api/domain/aggregate/Status/: status_aggregate.py  status_repository.py
backend/app/api/domain/entitiy/: model.py
backend/app/api/domain/entity/: status.py
backend/app/api/infrastructure/DatabaseToObject/: model.py  status.py
backend/app/api/infrastructure/database/: databaseInterface.py  get_db.py  model.py
backend/app/api/infrastructure/repository/: repository.py  status_repository.py
backend/app/api/presentation/: route.py
backend/app/api/presentation/schema/: schema.py  status.py
backend/app/database/: model.py  repository.py
database/: 1_create_table.sql
database/sql/: 1_create_table.sql  2_insert_poke.sql
frontend/: .eslintrc.json  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  prettier.config.js
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(root)/Dashboard/: TableForm.tsx  command.tsx  page.tsx  players.tsx
frontend/app/(root)/sample/: page.tsx
frontend/app/_components/: layouts.tsx
frontend/app/_components/common/: footer.tsx  header.tsx
frontend/app/api/libs/DashBoard/: code.ts  route.ts
frontend/app/api/libs/DashBoard/[slug]/: route.ts
frontend/app/api/utils/: dbAuth.ts
frontend/app/libs/components/: Footer.tsx  Header.tsx  layout.tsx
frontend/app/libs/utlis/: db.js
frontend/app/pages/Dashboard/: TableForm.tsx  page.tsx
frontend/app/pages/Dashboard/api/: db.js
frontend/components/: Footer.tsx  Header.tsx
frontend/models/: types.ts
frontend/public/database/: database.db
frontend/src/: App.js  App.jsx  index.js
frontend/src/components/: DashBoard.jsx  Graph.jsx
frontend/src/routes/: About.jsx  DashBoard.jsx  Home.jsx  NotFound.js  NotFound.jsx  fastapi.jsx
frontend/styles/: style.module.scss
server/: .gitignore  app.py  pyproject.toml  requirement.txt
server/src/: logObserver.py
